@@ -144,21 +144,21 @@ struct  mne     mne[] = {
     {   NULL,   "a",            S_A,            0,      0xFF      },
 
     {   NULL,   "nop",          S_NOP,          0,      0x0000    },
-    {   NULL,   "ret",          S_RET,          0,      0x007A    },
-    {   NULL,   "reti",         S_RETI,         0,      0x007B    },
+    {   NULL,   "ret",          S_RET,          0,      0x003A    },
+    {   NULL,   "reti",         S_RETI,         0,      0x003B    },
     {   NULL,   "mov",          S_MOV,          0,      0x2F00    },
     {   NULL,   "ldt16",        S_LDT16,        0,      0x0301    },
     {   NULL,   "stt16",        S_STT16,        0,      0x0300    },
     {   NULL,   "idxm",         S_IDXM,         0,      0x0380    },
     {   NULL,   "xch",          S_XCH,          0,      0x1380    },
-    {   NULL,   "pushaf",       S_PUSHAF,       0,      0x0072    },
-    {   NULL,   "popaf",        S_POPAF,        0,      0x0073    },
+    {   NULL,   "pushaf",       S_PUSHAF,       0,      0x0032    },
+    {   NULL,   "popaf",        S_POPAF,        0,      0x0033    },
     {   NULL,   "push",         S_PUSHAF,       0,      0x2072    },
     {   NULL,   "pop",          S_POPAF,        0,      0x2073    },
     {   NULL,   "add",          S_ADD,          0,      0x2800    },
-    {   NULL,   "addc",         S_ADDC,         0,      0x0060    },
+    {   NULL,   "addc",         S_ADDC,         0,      0x0010    },
     {   NULL,   "sub",          S_SUB,          0,      0x2900    },
-    {   NULL,   "subc",         S_SUBC,         0,      0x0061    },
+    {   NULL,   "subc",         S_SUBC,         0,      0x0011    },
     {   NULL,   "inc",          S_INC,          0,      0x1200    },
     {   NULL,   "dec",          S_DEC,          0,      0x1280    },
     {   NULL,   "clear",        S_CLEAR,        0,      0x1300    },
@@ -170,29 +170,29 @@ struct  mne     mne[] = {
     {   NULL,   "and",          S_AND,          0,      0x2C00    },
     {   NULL,   "or",           S_OR,           0,      0x2D00    },
     {   NULL,   "xor",          S_XOR,          0,      0x2E00    },
-    {   NULL,   "not",          S_NOT,          0,      0x0068    },
-    {   NULL,   "neg",          S_NEG,          0,      0x0069    },
+    {   NULL,   "not",          S_NOT,          0,      0x0018    },
+    {   NULL,   "neg",          S_NEG,          0,      0x0019    },
     {   NULL,   "set0",         S_SET0,         0,      0x0000    },
     {   NULL,   "set1",         S_SET1,         0,      0x0000    },
     {   NULL,   "ceqsn",        S_CEQSN,        0,      0x2A00    },
     {   NULL,   "t0sn",         S_T0SN,         0,      0x0000    },
     {   NULL,   "t1sn",         S_T1SN,         0,      0x0001    },
-    {   NULL,   "izsn",         S_IZSN,         0,      0x0062    },
-    {   NULL,   "dzsn",         S_DZSN,         0,      0x0063    },
+    {   NULL,   "izsn",         S_IZSN,         0,      0x0012    },
+    {   NULL,   "dzsn",         S_DZSN,         0,      0x0013    },
     {   NULL,   "call",         S_CALL,         0,      0x3800    },
     {   NULL,   "goto",         S_GOTO,         0,      0x3000    },
-    {   NULL,   "pcadd",        S_PCADD,        0,      0x0067    },
-    {   NULL,   "engint",       S_ENGINT,       0,      0x0078    },
-    {   NULL,   "disgint",      S_DISGINT,      0,      0x0079    },
-    {   NULL,   "stopsys",      S_STOPSYS,      0,      0x0076    },
-    {   NULL,   "stopexe",      S_STOPEXE,      0,      0x0077    },
-    {   NULL,   "reset",        S_RESET,        0,      0x0075    },
-    {   NULL,   "wdreset",      S_WDRESET,      0,      0x0070    },
+    {   NULL,   "pcadd",        S_PCADD,        0,      0x0017    },
+    {   NULL,   "engint",       S_ENGINT,       0,      0x0038    },
+    {   NULL,   "disgint",      S_DISGINT,      0,      0x0039    },
+    {   NULL,   "stopsys",      S_STOPSYS,      0,      0x0036    },
+    {   NULL,   "stopexe",      S_STOPEXE,      0,      0x0037    },
+    {   NULL,   "reset",        S_RESET,        0,      0x0035    },
+    {   NULL,   "wdreset",      S_WDRESET,      0,      0x0030    },
     {   NULL,   "swapc",        S_SWAPC,        0,      0x0400    },
     {   NULL,   "cneqsn",       S_CNEQSN,       0,      0x2A00    },
     {   NULL,   "comp",         S_COMP,         0,      0x0600    },
     {   NULL,   "nadd",         S_NADD,         0,      0x0700    },
-    {   NULL,   "mul",          S_MUL,          0,      0x007C    },
+    {   NULL,   "mul",          S_MUL,          0,      0x003C    },
     {   NULL,   "ldsptl",       S_LDSPTL,       0,      0x0006    },
     {   NULL,   "ldspth",       S_LDSPTH,       S_EOL,  0x0007    },
 };
